# Thesis

fedrl-framework/: pyproject.toml
fedrl-framework/src/core/: aggregator.py  communication_protocols.py  node.py  server.py
